// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb> should render correctly 1`] = `
<TextLink
  forwardedRef={null}
  href="http://www.8x8.com"
  isDisabled={false}
  target="_blank"
  theme={
    {
      "textLinkColorPrimaryDisabled": "#1C2025",
    }
  }
  title="Example title"
>
  Item 1
</TextLink>
`;

exports[`<Breadcrumb> should render correctly as active 1`] = `
<TextLink
  forwardedRef={null}
  href="http://www.8x8.com"
  isDisabled={true}
  target="_blank"
  theme={
    {
      "textLinkColorPrimaryDisabled": "#1C2025",
    }
  }
  title="Example title"
>
  Item 1
</TextLink>
`;
